Release notes
=============

master
------

Note to packagers:

 - Rename README, INSTALL, and NEWS to end in '.adoc'.
 - BUGS file has been merged into README.
 - Rename (again) doc/ AsciiDoc files to end in '.adoc'.
 - Default keybindings have been moved to a system-level tigrc file, which is
   installed to ${sysconfdir} by default.

Incompatibilities:

 - Only use 'diff-options' for the diff view and introduce '%(cmdlineargs)' to
   hold non-file and non-revision flags passed on the command line. Affects all
   user-defined commands that expect '%(diffargs)' to hold both 'diff-options'
   arguments and those passed on the command line. (GH #228)
 - Remove built-in keybinding for `git gc`. Add the following line to `~/.tigrc`
   to restore it: `bind generic G ?git gc`.

Improvements:

 - Add mouse support: scroll view, click line to move cursor, double click line
   (or click again) to "Enter" cursor line, e.g. open commit diff. Disabled by
   default, since it makes text selection less intuitive. If you enable this
   remember to hold down Shift (or Option on Mac) when selecting text.
 - Rewrite and improve the rendering of the commit graph. (GH #144, GH #46)
 - Add a new "auto" value for the 'vertical-split' option to let Tig choose the
   split orientation (this is the new default behavior).
 - Add toggle-vertical-split option to change the vertical split value.
 - Add 'stage-split-chunk' action for splitting chunks in the stage view.
   Bound to '\' by default. (GH #107)
 - Add 'back' action bound to '<' by default, which will return the blame view
   to the previous revision and line after moving e.g. to the parent. (GH #124)
 - User-defined commands no longer needs to always be prefixed with '!'.
 - Add auto-configuration for Cygwin (OS name: CYGWIN_NT-6.1). (GH #92)
 - Add toggling for display files of untracked directories.
 - Add main view pager mode that reads git-log's '--pretty=raw' data