@@ -49,6 +49,7 @@ deps/.DS_Store
 #/target
 aclocal.m4
 autom4te.cache
+builtin-config.c
 config.h
 config.h.in
 config.log
