@@ -13,4 +13,7 @@ CPPFLAGS =-DHAVE_NCURSESW_CURSES_H
 # Uncomment to enable work-around for missing mkstemps().
 #NO_MKSTEMPS=y
 
+# Uncomment to not include built-in tigrc inside the binary.
+#NO_BUILTIN_TIGRC=y
+
 # vim: ft=make:
